fixed package errors and published to Github Registry

--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
-  "name": "lineage",
-  "version": "0.1.0",
-  "private": true,
+  "name": "@eon-collective/adept-layout-library",
+  "repository": "github:eon-collective/adept-lineage-layout",
+  "version": "0.1.3",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/@eon-collective"
+  },
+  "main": "./dist/adept-layout-library.cjs.js",
+  "module": "./dist/adept-layout-library.es.js",
+  "types": "./dist/types/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "vite build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pack": "npm pack"
   },
   "dependencies": {
     "@radix-ui/react-avatar": "^1.1.4",
@@ -32,6 +42,8 @@
     "eslint-config-next": "15.3.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vite": "^6.3.2",
+    "vite-plugin-dts": "^4.5.3"
   }
 }
